Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15477

osc_extent_wait() deadlock

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      Thread 1:

      __schedule
      schedule
      osc_extent_wait
      osc_extent_find
      osc_queue_async_io
      osc_page_cache_add
      osc_io_commit_async
      cl_io_commit_async
      lov_io_commit_async
      cl_io_commit_async
      vvp_io_write_commit
      vvp_io_write_start
      cl_io_start
      cl_io_loop
      ll_file_io_generic
      ll_file_write_iter
      new_sync_write
      __vfs_write
      vfs_write
      ksys_write
      __x64_sys_write
      do_syscall_64
      entry_SYSCALL_64_after_hwframe
      Progs:  4747 "IOR" 4749 "IOR"
      

      Thread 2:

      __schedule
      schedule
      io_schedule
      __lock_page
      vvp_page_make_ready_start
      cl_page_make_ready_start
      osc_extent_make_ready
      osc_extent_finish
      brw_interpret
      ptlrpc_check_set
      ptlrpcd_check
      ptlrpcd
      kthread
      ret_from_fork
      Progs:  12707 "ptlrpcd_00_04"
      

      We must not hold a page lock while we do osc_extent_find()

            askulysh Andriy Skulysh
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: